修改Stop.sh